# gxtexture_base

./: .gitmodules  README.md
gxtexture/: CMakeLists.txt
gxtexture/include/: gxtexture.h
gxtexture/include/configure/: gxtexture_settings.h  gxtexture_settings.h.in  gxtexture_version.h  gxtexture_version.h.in
gxtexture/src/: gxtexture.c
octree_color_quantizer/: CMakeLists.txt
octree_color_quantizer/include/: octree_color_quantizer.h
octree_color_quantizer/include/configure/: octree_color_quantizer_settings.h  octree_color_quantizer_settings.h.in  octree_color_quantizer_version.h  octree_color_quantizer_version.h.in
octree_color_quantizer/src/: octree_color_quantizer.c
tga/: CMakeLists.txt
tga/include/: tga.h
tga/include/configure/: tga_settings.h  tga_settings.h.in  tga_version.h  tga_version.h.in
tga/src/: tga.c
txtr/: CMakeLists.txt
txtr/include/: txtr.h
txtr/include/configure/: txtr_settings.h  txtr_settings.h.in  txtr_version.h  txtr_version.h.in
txtr/src/: txtr.c
